--- a/src/App.css
+++ b/src/App.css
@@ -335,21 +335,24 @@ button {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   /* For mobile phones: */
   .container {
     padding: 20px;
   }
-  .characterGrid {
-    display: inline-grid;
-    grid-template-columns: auto auto;
-    margin: auto;
-    width: 80%;
+  /*.characterGrid {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+  }
+  .characterItem {
+    width: 40%;
   }
   .character-card,
   .house-card {
-    min-width: 40%;
-  }
+    width: 100%;
+  } */
+
   .main-image {
     width: 100%;
   }
